...

  if (!session) {
    return <Redirect href="/(auth)/sign-up" />;
  }

  const HomeTabButton = (props: any) => (
    <HapticTab {...props} testID="home-tab" />
  );
  const CalendarTabButton = (props: any) => (
    <HapticTab {...props} testID="calendar-tab" />
  );
  const StatsTabButton = (props: any) => (
    <HapticTab {...props} testID="stats-tab" />
  );
  const ProfileTabButton = (props: any) => (
    <HapticTab {...props} testID="profile-tab" />
  );
  return (
    <Tabs
      screenOptions={{
        tabBarShowLabel: false,
        tabBarActiveTintColor: Colors['light'].tint,
...
